updated index.html; fixed code
