# web_scraper/static/swagger_flask.json
@@ -20,7 +20,7 @@
                 "parameters": [
                     {
                         "name": "url",
-                        "in": "path",
+                        "in": "query",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -194,238 +194,6 @@
                     },
                     "400": {
                         "description": "Wrong Input! need a JSON format!"
-                    }
-                }
-            }
-        },
-        "/heading/{url}": {
-            "get": {
-                "tags": [
-                    "Scrape Headings"
-                ],
-                "summary": "Parse a URL, get all headings from a Website",
-                "description": "When passing a WebUrl address, all the headings are stored in a json file.",
-                "parameters": [
-                    {
-                        "name": "url",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "/heading/www.the-website-you-want-to-scrape.com"
-                    }
-                }
-            }
-        },
-        "/image/{url}": {
-            "get": {
-                "tags": [
-                    "Scrape Images"
-                ],
-                "summary": "Parse a URL, get all images from a Website",
-                "description": "When passing a WebUrl address, all the images are stored in a json file.",
-                "parameters": [
-                    {
-                        "name": "url",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "/image/www.the-website-you-want-to-scrape.com"
-                    }
-                }
-            }
-        },
-        "/text/{url}": {
-            "get": {
-                "tags": [
-                    "Scrape Texts"
-                ],
-                "summary": "Parse a URL, get all titles and texts from a Website",
-                "description": "When passing a WebUrl address, all the titles and texts are stored in a json file.",
-                "parameters": [
-                    {
-                        "name": "url",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "/text/www.the-website-you-want-to-scrape.com"
-                    }
-                }
-            }
-        },
-        "/auto/{url}": {
-            "get": {
-                "tags": [
-                    "Scrape Information"
-                ],
-                "summary": "Parse a URL, get all information from a Website",
-                "description": "When passing a WebUrl address, all the information is stored in a json file.",
-                "parameters": [
-                    {
-                        "name": "url",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "/auto/www.the-website-you-want-to-scrape.com"
-                    }
-                }
-            }
-        },
-        "/find/{item}/{url}": {
-            "get": {
-                "tags": [
-                    "Scrape Finds"
-                ],
-                "summary": "Parse a URL and an item, get all finds from a Website",
-                "description": "When passing a WebUrl address and an item, all the finds are stored in a json file.",
-                "parameters": [
-                    {
-                        "name": "item",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "url",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "/find/the-item-you-want-to-scrape/www.the-website-you-want-to-scrape.com"
-                    }
-                }
-            }
-        },
-        "/find/{item}/{element}/{url}": {
-            "get": {
-                "tags": [
-                    "Scrape Finds"
-                ],
-                "summary": "Parse a URL, an item and an element, get all finds from a Website",
-                "description": "When passing a WebUrl address, an item and an element, all the finds are stored in a json file.",
-                "parameters": [
-                    {
-                        "name": "item",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "element",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "url",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "/find/the-item-you-want-to-scrape/www.the-website-you-want-to-scrape.com"
-                    }
-                }
-            }
-        },
-        "/find/": {
-            "post": {
-                "tags": [
-                    "Scrape Finds"
-                ],
-                "summary": "Parse multiple URLs and a keyword, retrieve find data from each website.",
-                "description": "Pass a list of URLs and a keyword in JSON format to scrape find information from multiple websites.",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "keyword": {
-                                        "type": "string",
-                                        "example": "Bachelor"
-                                    },
-                                    "urls": {
-                                        "type": "array",
-                                        "items": {
-                                            "type": "string"
-                                        }
-                                    }
-                                },
-                                "example": {
-                                    "keyword": "Bachelor",
-                                    "urls": [
-                                        "https://rwu.de",
-                                        "https://www.uni-konstanz.de/"
-                                    ]
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Wrong Input. Need a JSON format!"
                     }
                 }
             }
